fix stupid horizontal scroll bar

--- a/css/local.css
+++ b/css/local.css
@@ -1,3 +1,7 @@
+body {
+    overflow-x: hidden;
+}
+
 ul.bulletlist {
     list-style-type: disc;
     list-style-position: outside;
